[gd_scene load_steps=20 format=3 uid="uid://didfb68gd710c"]

[ext_resource type="Texture2D" uid="uid://brfip5pr3myj5" path="res://Assets/grass_spritesheet.png" id="1_kyryt"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_wlflx"]
[ext_resource type="PackedScene" uid="uid://bqc4l7e44c01l" path="res://Scenes/tower.tscn" id="4_mu4hu"]
[ext_resource type="Theme" uid="uid://eo2yt6tnyxbn" path="res://Themes/UI_Theme.tres" id="5_0s54i"]
[ext_resource type="Script" path="res://Scripts/SpawnOnPath.gd" id="5_1mm45"]
[ext_resource type="Texture2D" uid="uid://c211daqbhqofq" path="res://Assets/gun.png" id="6_88tsj"]
[ext_resource type="Script" path="res://Scripts/PlaceTower.gd" id="6_i2pos"]
[ext_resource type="PackedScene" uid="uid://gu4ksp2me4jn" path="res://Scenes/weak_enemy_path.tscn" id="6_vhy6x"]
[ext_resource type="PackedScene" uid="uid://cmk53exapcrso" path="res://Scenes/strong_enemy_path.tscn" id="7_c0sdi"]
[ext_resource type="PackedScene" uid="uid://cqrbxh3rh0crp" path="res://Scenes/home_base.tscn" id="7_fjm51"]
[ext_resource type="PackedScene" uid="uid://ckxn2tdxyx78e" path="res://Scenes/shotgun_tower.tscn" id="7_wbtf1"]
[ext_resource type="PackedScene" uid="uid://bi1nbyv8ohnpw" path="res://Scenes/machinegun_tower.tscn" id="8_7k614"]

[sub_resource type="GDScript" id="GDScript_aem85"]
script/source = "extends CanvasLayer

@export var canvas_layer: CanvasLayer
var local_pos = Vector2(10, 20)
func set_tower_preview(tower: PackedScene, mouse_pos):
	var dragable_tower = tower.instantiate()
	dragable_tower.set_name(\"DragTower\")
	#dragable_tower.modulate = Color(\"ad54ff3c\")
	dragable_tower.scale = Vector2(4.0, 4.0)
	var control = Control.new()
	control.add_child(dragable_tower, true)
	#control.position = get_viewport_transform() * (get_global_transform() * local_pos)
	control.set_name(\"TowerPreview\")
	add_child(control, true)
	return dragable_tower
	
func update_tower_preview(new_position, color):
	var preview = get_node(\"DragTower\")
	if preview:
		preview.position = new_position
		if preview.modulate != Color(color):
			preview.modulate = Color(color)
"

[sub_resource type="TileMapPattern" id="TileMapPattern_fjmtb"]
tile_data = PackedInt32Array(0, 393216, 2, 65536, 262144, 1, 1, 262144, 1, 65537, 327680, 0, 2, 327680, 0, 65538, 393216, 2)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_llwgh"]
texture = ExtResource("1_kyryt")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/custom_data_0 = true
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_6lydd"]
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "can_place_tower"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_llwgh")
pattern_0 = SubResource("TileMapPattern_fjmtb")

[sub_resource type="Curve2D" id="Curve2D_7plqc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 219, -86, 0, 0, 0, 0, 23, -87, 0, 0, 0, 0, 23, -8, 0, 0, 0, 0, -170, -8)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_yidmv"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 222, 73, 0, 0, 0, 0, 23, 74, 0, 0, 0, 0, 22, -7, 0, 0, 0, 0, -169, -8)
}
point_count = 4

[sub_resource type="Curve2D" id="Curve2D_tjt71"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 220, -8, 0, 0, 0, 0, -172, -8)
}
point_count = 2

[node name="DefenseLevel" type="Node2D" node_paths=PackedStringArray("canvas_layer")]
script = ExtResource("1_wlflx")
canvas_layer = NodePath("GameUI")

[node name="GameUI" type="CanvasLayer" parent="." node_paths=PackedStringArray("canvas_layer")]
script = SubResource("GDScript_aem85")
canvas_layer = NodePath(".")

[node name="GameInfoContainer" type="PanelContainer" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -304.0
offset_top = 15.0
offset_right = -17.0
offset_bottom = 239.0
grow_horizontal = 0
theme = ExtResource("5_0s54i")

[node name="MarginContainer" type="MarginContainer" parent="GameUI/GameInfoContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="GameUI/GameInfoContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "This is the UI for all of the level related info"

[node name="BaseLifeLabel" type="Label" parent="GameUI/GameInfoContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Base Life"

[node name="ScoreLabel" type="Label" parent="GameUI/GameInfoContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Score"

[node name="WaveLabel" type="Label" parent="GameUI/GameInfoContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Waves"

[node name="EnemiesLeftLabel" type="Label" parent="GameUI/GameInfoContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies"

[node name="QuestPanelContainer" type="PanelContainer" parent="GameUI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -271.0
offset_right = 416.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0s54i")

[node name="VBoxContainer" type="VBoxContainer" parent="GameUI/QuestPanelContainer"]
layout_mode = 2

[node name="QuestTitle" type="Label" parent="GameUI/QuestPanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Title
"
horizontal_alignment = 1

[node name="QuestInfo" type="Label" parent="GameUI/QuestPanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
text = "ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ ABCDEFG HIJKLMNOP QRSTUVWXYZ"
autowrap_mode = 2

[node name="Control" type="Control" parent="GameUI/QuestPanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/QuestPanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="GameUI/QuestPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="AcceptButton" type="Button" parent="GameUI/QuestPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"

[node name="DeclineButton" type="Button" parent="GameUI/QuestPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Decline"

[node name="Control2" type="Control" parent="GameUI/QuestPanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="PlaceableTowerContainer" type="PanelContainer" parent="GameUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -246.0
offset_top = -192.0
offset_right = 246.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_0s54i")

[node name="MarginContainer" type="MarginContainer" parent="GameUI/PlaceableTowerContainer"]
layout_mode = 2

[node name="BuildTowerButtons" type="HBoxContainer" parent="GameUI/PlaceableTowerContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="GameUI/PlaceableTowerContainer/MarginContainer/BuildTowerButtons" groups=["build_buttons"]]
layout_mode = 2
icon = ExtResource("6_88tsj")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_i2pos")
towerType = ExtResource("4_mu4hu")

[node name="Button2" type="Button" parent="GameUI/PlaceableTowerContainer/MarginContainer/BuildTowerButtons" groups=["build_buttons"]]
layout_mode = 2
icon = ExtResource("6_88tsj")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_i2pos")
towerType = ExtResource("7_wbtf1")

[node name="Button3" type="Button" parent="GameUI/PlaceableTowerContainer/MarginContainer/BuildTowerButtons" groups=["build_buttons"]]
layout_mode = 2
icon = ExtResource("6_88tsj")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_i2pos")
towerType = ExtResource("8_7k614")

[node name="Button4" type="Button" parent="GameUI/PlaceableTowerContainer/MarginContainer/BuildTowerButtons" groups=["build_buttons"]]
layout_mode = 2
icon = ExtResource("6_88tsj")
icon_alignment = 1
expand_icon = true
script = ExtResource("6_i2pos")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6lydd")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-131071, 0, 0, -65535, 0, 0, -1, 0, 0, -65534, 0, 0, 65533, 0, 0, -3, 0, 0, -65539, 0, 0, -65538, 0, 0, -131074, 262144, 1, -4, 0, 0, -65540, 0, 0, -131076, 327680, 0, -131075, 393216, 2, -196609, 262144, 1, -196610, 393216, 2, -196611, 327680, 0, -196612, 262144, 1, 131069, 393216, 2, 131070, 262144, 1, 65532, 0, 0, 131068, 327680, 0, 65538, 0, 0, 65539, 393216, 2, 2, 0, 0, -65533, 0, 0, -196607, 0, 0, 3, 0, 0, -196608, 0, 0, -262144, 0, 0, -262140, 262144, 0, -196605, 393216, 2, -262143, 0, 0, -262141, 327680, 0, -196604, 327680, 0, 4, 0, 0, -65532, 0, 0, 65540, 262144, 1, 65534, 0, 0, -2, 0, 0, -131073, 327680, 0, -65537, 0, 0, -131072, 0, 0, -65536, 0, 0, 65535, 0, 0, 131071, 327680, 0, 0, 0, 0, 65536, 0, 0, 1, 0, 0, 65537, 0, 0, 196606, 393216, 2, 262142, 262144, 1, 196607, 262144, 1, 262143, 327680, 0, 131072, 0, 0, 196608, 0, 0, 131073, 0, 0, 196609, 0, 0, 131074, 0, 0, 196610, 0, 0, 131075, 393216, 0, 196611, 0, 0, 131076, 393216, 2, 196612, 0, 0, 131077, 262144, 1, 196613, 0, 0, 131078, 393216, 0, 196614, 0, 0, 131079, 393216, 0, 196615, 0, 0, 131080, 262144, 1, 196616, 0, 0, 131081, 327680, 0, 196617, 0, 0, 7, 0, 0, 65543, 262144, 1, 8, 0, 0, 65544, 327680, 0, 9, 0, 0, 65545, 393216, 2, 262151, 0, 0, 327687, 0, 0, 262152, 0, 0, 327688, 0, 0, 262153, 0, 0, 327689, 0, 0, 262148, 0, 0, 327684, 0, 0, 262149, 0, 0, 327685, 0, 0, 262150, 0, 0, 327686, 0, 0, 5, 0, 0, 65541, 327680, 0, 6, 0, 0, 65542, 393216, 2, 393220, 393216, 2, 393221, 262144, 1, 393222, 327680, 0, 327681, 0, 0, 393217, 393216, 2, 327682, 0, 0, 393218, 262144, 1, 327683, 0, 0, 393219, 327680, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 393223, 393216, 2, 393224, 262144, 1, 393225, 327680, 0, 65546, 262144, 1, 131082, 327680, 0, 65547, 262144, 2, 131083, 393216, 0, 65548, 327680, 2, 131084, 327680, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -196601, 393216, 0, -196600, 262144, 2, -196599, 393216, 2, -65531, 0, 0, -65530, 0, 0, -65526, 0, 0, 10, 0, 0, -65525, 0, 0, 11, 0, 0, -65524, 0, 0, 12, 0, 0, -196598, 393216, 2, -196597, 327680, 0, -196596, 393216, 2, -262137, 262144, 2, -262136, 262144, 1, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -524283, 262144, 1, -458747, 0, 0, -524282, 327680, 0, -458746, 0, 0, -524281, 393216, 2, -458745, 0, 0, -524286, 262144, 1, -458750, 0, 0, -524285, 327680, 0, -458749, 0, 0, -524284, 262144, 1, -458748, 0, 0, -655358, 262144, 1, -589822, 327680, 0, -655357, 327680, 0, -589821, 393216, 2, -655356, 393216, 2, -589820, 262144, 1, -262139, 393216, 2, -262138, 262144, 1, -196602, 327680, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -458753, 262144, 1, -393217, 327680, 0, -524288, 327680, 0, -458752, 0, 0, -524287, 393216, 2, -458751, 0, 0, -524280, 262144, 1, -458744, 0, 0, -524279, 327680, 0, -458743, 0, 0, -524278, 393216, 2, -458742, 0, 0, -655352, 262144, 1, -589816, 327680, 0, -655351, 327680, 0, -589815, 393216, 2, -655350, 393216, 2, -589814, 262144, 1, -655355, 262144, 1, -589819, 327680, 0, -655354, 327680, 0, -589818, 393216, 0, -655353, 393216, 2, -589817, 262144, 1, -262134, 393216, 2, -262133, 262144, 1, -262132, 327680, 0, -262131, 393216, 2, -196595, 262144, 1, -65523, 0, 0, 13, 0, 0, 65549, 262144, 1, 196619, 0, 0, 196620, 0, 0, 131085, 393216, 0, 196621, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 458760, 327680, 0, 458761, 393216, 2, 393226, 393216, 2, 458762, 262144, 1, 393227, 262144, 1, 458763, 327680, 0, 393228, 327680, 0, 458764, 393216, 2, 393229, 393216, 2, 458765, 262144, 1, 458757, 327680, 0, 458758, 393216, 2, 458759, 262144, 1, 458754, 327680, 0, 458755, 393216, 2, 458756, 262144, 1, 327679, 262144, 1, 393215, 327680, 0, 262144, 0, 0, 327680, 0, 0, 327676, 262144, 1, 393212, 327680, 0, 327677, 327680, 0, 393213, 393216, 2, 327678, 393216, 2, 393214, 262144, 1, 458751, 393216, 2, 524287, 262144, 1, 393216, 262144, 1, 458752, 327680, 0, 458753, 262144, 1, 458748, 262144, 1, 524284, 327680, 0, 458749, 327680, 0, 524285, 393216, 2, 458750, 327680, 0, 524286, 393216, 2, 327675, 393216, 2, 393211, 262144, 1, 458747, 393216, 2, 524283, 262144, 1, 458744, 393216, 2, 524280, 262144, 1, 458745, 262144, 1, 524281, 327680, 0, 458746, 327680, 0, 524282, 393216, 2, 458741, 393216, 2, 524277, 262144, 1, 458742, 262144, 1, 524278, 327680, 0, 458743, 327680, 0, 524279, 393216, 2, 327669, 393216, 0, 393205, 393216, 1, 327670, 262144, 1, 393206, 327680, 0, 327671, 262144, 2, 393207, 393216, 2, 196597, 327680, 1, 262133, 327680, 2, 196598, 393216, 1, 262134, 327680, 0, 196599, 327680, 0, 262135, 393216, 2, 196600, 393216, 2, 262136, 327680, 1, 196601, 393216, 0, 262137, 393216, 1, 196602, 327680, 0, 262138, 393216, 0, 65528, 0, 0, 131064, 262144, 1, 65529, 0, 0, 131065, 327680, 0, 65530, 0, 0, 131066, 393216, 2, 65531, 0, 0, 131067, 262144, 1, 196603, 393216, 2, 262139, 262144, 1, 196604, 262144, 1, 262140, 327680, 0, 196605, 327680, 0, 262141, 393216, 2, -65544, 0, 0, -8, 0, 0, -65543, 0, 0, -7, 0, 0, -65542, 0, 0, -6, 0, 0, -196616, 393216, 2, -131080, 262144, 1, -196615, 262144, 1, -131079, 327680, 0, -196614, 327680, 0, -131078, 393216, 2, -327688, 393216, 2, -262152, 262144, 1, -327687, 262144, 1, -262151, 327680, 0, -327686, 327680, 0, -262150, 393216, 2, -327685, 393216, 2, -262149, 262144, 1, -327684, 262144, 2, -262148, 327680, 0, -327683, 327680, 2, -262147, 393216, 2, -458757, 393216, 2, -393221, 262144, 1, -458756, 262144, 1, -393220, 327680, 0, -458755, 327680, 0, -393219, 327680, 1, -458754, 393216, 0, -393218, 393216, 1, -393215, 0, 0, -327679, 0, 0, -65541, 0, 0, -5, 0, 0, -327682, 393216, 2, -262146, 262144, 1, -327681, 262144, 1, -262145, 327680, 0, -393216, 0, 0, -327680, 0, 0, -196613, 393216, 2, -131077, 262144, 1, 327672, 327680, 2, 393208, 262144, 2, 327673, 327680, 1, 393209, 327680, 2, 327674, 393216, 1, 393210, 393216, 2, 262155, 0, 0, 327691, 0, 0, 262156, 0, 0, 327692, 0, 0, -393205, 0, 0, -393204, 0, 0, -393203, 0, 0, -393202, 0, 0, -393201, 327680, 0, -327665, 393216, 2, -524275, 262144, 1, -458739, 0, 0, -524274, 262144, 1, -458738, 0, 0, -524273, 327680, 0, -458737, 393216, 2, -262130, 262144, 1, -196594, 327680, 0, -262129, 327680, 0, -196593, 393216, 2, -65522, 0, 0, -131057, 327680, 0, -65521, 393216, 2, 14, 0, 0, 65550, 327680, 0, 15, 327680, 0, 65551, 393216, 2, 131086, 262144, 1, 196622, 0, 0, 131087, 262144, 1, 196623, 262144, 1, 262157, 0, 0, 327693, 0, 0, 262158, 0, 0, 327694, 0, 0, 262159, 327680, 0, 327695, 262144, 1, -524277, 262144, 1, -458741, 0, 0, -524276, 327680, 0, -458740, 0, 0, -655349, 262144, 1, -589813, 327680, 0, -655348, 327680, 0, -589812, 393216, 2, -655359, 393216, 2, -589823, 262144, 1, -589826, 393216, 2, -524290, 262144, 1, -589825, 262144, 1, -524289, 327680, 0, -655360, 327680, 0, -589824, 393216, 2, -589829, 393216, 2, -524293, 262144, 1, -589828, 262144, 1, -524292, 327680, 0, -589827, 327680, 0, -524291, 393216, 2, -589832, 393216, 2, -524296, 393216, 0, -589831, 262144, 1, -524295, 327680, 0, -589830, 327680, 0, -524294, 393216, 0, -458760, 262144, 1, -393224, 393216, 2, -458759, 262144, 1, -393223, 327680, 0, -458758, 327680, 0, -393222, 393216, 2, 196594, 393216, 2, 262130, 262144, 1, 196595, 262144, 1, 262131, 327680, 0, 196596, 327680, 0, 262132, 262144, 2, 65522, 393216, 2, 131058, 262144, 1, 65523, 262144, 1, 131059, 327680, 0, 65524, 327680, 0, 131060, 393216, 2, -65550, 393216, 2, -14, 262144, 1, -65549, 262144, 1, -13, 327680, 0, -65548, 327680, 0, -12, 393216, 2, -65547, 0, 0, -11, 0, 0, -65546, 0, 0, -10, 0, 0, -65545, 0, 0, -9, 0, 0, -196619, 327680, 2, -131083, 262144, 1, -196618, 262144, 1, -131082, 327680, 0, -196617, 327680, 0, -131081, 393216, 2, -327691, 393216, 2, -262155, 327680, 1, -327690, 393216, 0, -262154, 393216, 1, -327689, 327680, 0, -262153, 393216, 2, -458763, 393216, 2, -393227, 262144, 1, -458762, 262144, 1, -393226, 262144, 2, -458761, 327680, 0, -393225, 393216, 2, 131088, 327680, 0, 196624, 393216, 2, 131089, 393216, 2, 196625, 262144, 1, 16, 393216, 2, 65552, 262144, 1, 17, 262144, 1, 65553, 327680, 0, 18, 327680, 0, 65554, 393216, 2, 393230, 262144, 1, 458766, 327680, 0, 393231, 327680, 0, 458767, 393216, 2, 65525, 0, 0, 131061, 262144, 1, 65526, 0, 0, 131062, 393216, 0, 65527, 0, 0, 131063, 393216, 2, 458738, 393216, 2, 524274, 262144, 1, 458739, 262144, 2, 524275, 327680, 0, 458740, 327680, 2, 524276, 393216, 2, 327666, 393216, 2, 393202, 262144, 1, 327667, 262144, 1, 393203, 327680, 0, 327668, 327680, 0, 393204, 327680, 1, -589835, 393216, 2, -524299, 262144, 1, -589834, 262144, 1, -524298, 327680, 0, -589833, 327680, 0, -524297, 327680, 0, -196622, 393216, 2, -131086, 262144, 1, -196621, 262144, 1, -131085, 327680, 0, -196620, 262144, 2, -131084, 393216, 2, -327694, 393216, 2, -262158, 262144, 1, -327693, 262144, 1, -262157, 327680, 0, -327692, 327680, 0, -262156, 393216, 2, -458766, 393216, 2, -393230, 262144, 1, -458765, 262144, 1, -393229, 327680, 0, -458764, 327680, 0, -393228, 393216, 2, -589838, 393216, 2, -524302, 262144, 1, -589837, 262144, 1, -524301, 327680, 0, -589836, 327680, 0, -524300, 393216, 2, -655347, 393216, 2, -589811, 262144, 1, -655346, 262144, 1, -589810, 327680, 0, -655345, 327680, 0, -589809, 393216, 0, -131056, 393216, 2, -65520, 262144, 1, -131055, 262144, 1, -65519, 327680, 0, -131054, 327680, 0, -65518, 393216, 2, -393200, 393216, 2, -327664, 262144, 1, -393199, 262144, 1, -327663, 327680, 0, -393198, 327680, 0, -327662, 393216, 2, -524272, 393216, 2, -458736, 262144, 1, -524271, 262144, 1, -458735, 327680, 0, -524270, 327680, 0, -458734, 393216, 2, -655344, 393216, 2, -589808, 262144, 1, -655343, 262144, 1, -589807, 327680, 0, -655342, 327680, 0, -589806, 393216, 2, -262128, 393216, 2, -196592, 262144, 1, -262127, 262144, 1, -196591, 327680, 0, -262126, 327680, 0, -196590, 393216, 2, 262160, 262144, 1, 262161, 327680, 0, 327696, 393216, 2, 393232, 393216, 2, 327697, 262144, 1, 393233, 327680, 1, 327698, 393216, 0, 393234, 393216, 1, 458768, 262144, 2, 458769, 327680, 2, 458770, 393216, 2, 262162, 262144, 0, 196626, 262144, 0, 131090, 262144, 0, -196603, 262144, 1, -131067, 0, 0, -131068, 0, 0, -131069, 0, 0, -131070, 0, 0, -196606, 0, 0, -262142, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -262135, 262144, 1, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -327667, 0, 0, -327666, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0)
layer_1/name = "OverlappingGrass"
layer_1/tile_data = PackedInt32Array(327693, 131072, 2, 327692, 131072, 2, 327691, 131072, 2, 327690, 131072, 2, 327689, 131072, 2, 327688, 131072, 2, 327687, 131072, 2, 327686, 131072, 2, 327685, 131072, 2, 327684, 131072, 2, 327683, 131072, 2, 327682, 131072, 2, 327680, 65536, 2, 327681, 131072, 2, 262144, 65536, 1, 196608, 65536, 1, 131072, 65536, 1, 327694, 196608, 2, 196622, 196608, 0, 196621, 131072, 0, 196620, 131072, 0, 196619, 131072, 0, 196618, 131072, 0, 196617, 131072, 0, 196616, 131072, 0, 196615, 131072, 0, 196614, 131072, 0, 196613, 131072, 0, 196612, 131072, 0, 196611, 131072, 0, 131074, 196608, 1, 65538, 196608, 1, -458739, 131072, 0, -458740, 131072, 0, -458741, 131072, 0, -458742, 131072, 0, -458743, 131072, 0, -458744, 131072, 0, -458745, 131072, 0, -458746, 131072, 0, -458747, 131072, 0, -458748, 131072, 0, -458749, 131072, 0, -458750, 131072, 0, -458751, 131072, 0, -458752, 65536, 0, -458738, 196608, 0, -327666, 196608, 2, -327667, 131072, 2, -327668, 131072, 2, -327669, 131072, 2, -327670, 131072, 2, -327671, 131072, 2, -327672, 131072, 2, -327673, 131072, 2, -327674, 131072, 2, -327675, 131072, 2, -327676, 131072, 2, -327677, 131072, 2, -196606, 196608, 1, -262142, 196608, 1, -131059, 131072, 0, -131060, 131072, 0, -131061, 131072, 0, -131062, 131072, 0, -131063, 131072, 0, -131064, 131072, 0, -131065, 131072, 0, -131066, 131072, 0, -131067, 131072, 0, -131068, 131072, 0, -131069, 131072, 0, 13, 131072, 2, 12, 131072, 2, 11, 131072, 2, 10, 131072, 2, 9, 131072, 2, 8, 131072, 2, 7, 131072, 2, 6, 131072, 2, 5, 131072, 2, 4, 131072, 2, 3, 131072, 2, 14, 196608, 2, -131058, 196608, 0, -65522, 196608, 1, -393202, 196608, 1, 262158, 196608, 1, 65534, 131072, 2, 65533, 131072, 2, 65532, 131072, 2, 65531, 131072, 2, 65530, 131072, 2, 65529, 131072, 2, 65528, 131072, 2, 65527, 131072, 2, 65526, 131072, 2, 65535, 131072, 2, -65537, 131072, 0, -65538, 131072, 0, -65539, 131072, 0, -65540, 131072, 0, -65541, 131072, 0, -65542, 131072, 0, -65543, 131072, 0, -65544, 131072, 0, -65545, 131072, 0, -65546, 131072, 0, -196608, 65536, 1, -262144, 65536, 1, -327680, 65536, 1, -393216, 65536, 1, 65536, 65536, 1, 0, 393216, 2, -131070, 393216, 2, 196610, 327680, 2, 2, 327680, 2, -131072, 327680, 2, -327678, 393216, 2, -65547, 65536, 0, -11, 65536, 1, 65525, 65536, 2)
layer_2/name = "Rocks"
layer_2/modulate = Color(0.0980392, 0.109804, 0.109804, 0.917647)
layer_2/tile_data = PackedInt32Array()
layer_3/name = "TowerPlacement"
layer_3/modulate = Color(0.545098, 1, 1, 1)
layer_3/tile_data = PackedInt32Array(131075, 0, 1, 65539, 0, 1, 65540, 0, 1, 131076, 0, 1, 131077, 0, 1, 65541, 0, 1, 65542, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 65549, 0, 1, 65548, 0, 1, 65547, 0, 1, 65546, 0, 1, 65545, 0, 1, 65544, 0, 1, 65543, 0, 1, -262141, 0, 1, -196605, 0, 1, -196604, 0, 1, -196603, 0, 1, -262139, 0, 1, -262140, 0, 1, -262138, 0, 1, -196602, 0, 1, -196601, 0, 1, -196600, 0, 1, -196599, 0, 1, -196598, 0, 1, -196597, 0, 1, -196596, 0, 1, -196595, 0, 1, -262131, 0, 1, -262132, 0, 1, -262133, 0, 1, -262134, 0, 1, -262135, 0, 1, -262136, 0, 1, -262137, 0, 1, -327681, 0, 1, -262145, 0, 1, -196609, 0, 1, -131073, 0, 1, -131074, 0, 1, -131075, 0, 1, -131076, 0, 1, -131077, 0, 1, -131078, 0, 1, -131079, 0, 1, -131080, 0, 1, -131081, 0, 1, 327679, 0, 1, 262143, 0, 1, 196607, 0, 1, 131071, 0, 1, 131070, 0, 1, 131069, 0, 1, 131068, 0, 1, 131067, 0, 1, 131066, 0, 1, 131065, 0, 1, 131064, 0, 1, 131063, 0, 1, 196599, 0, 1, 196600, 0, 1, 196601, 0, 1, 196602, 0, 1, 196603, 0, 1, 196604, 0, 1, 196605, 0, 1, 196606, 0, 1, 262142, 0, 1, 327678, 0, 1, -327682, 0, 1, -262146, 0, 1, -196610, 0, 1, -196611, 0, 1, -196612, 0, 1, -196613, 0, 1, -196614, 0, 1, -196615, 0, 1, -196616, 0, 1, -196617, 0, 1)

[node name="HomeBase" parent="." instance=ExtResource("7_fjm51")]
position = Vector2(-207, -7)
health = 100.0

[node name="Paths" type="Node" parent="."]

[node name="TopPath" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_7plqc")
script = ExtResource("5_1mm45")
spawn_interval_min = 3.0
spawn_interval_max = 5.0
enemy_paths_to_spawn = Array[PackedScene]([ExtResource("6_vhy6x"), ExtResource("7_c0sdi")])

[node name="BottomPath" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_yidmv")
script = ExtResource("5_1mm45")
spawn_interval_min = 3.0
spawn_interval_max = 5.0
enemy_paths_to_spawn = Array[PackedScene]([ExtResource("6_vhy6x"), ExtResource("7_c0sdi")])

[node name="MiddlePath" type="Path2D" parent="Paths"]
curve = SubResource("Curve2D_tjt71")
script = ExtResource("5_1mm45")
spawn_interval_min = 3.0
spawn_interval_max = 5.0
enemy_paths_to_spawn = Array[PackedScene]([ExtResource("6_vhy6x"), ExtResource("7_c0sdi")])

[node name="Towers" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(23, -9)
zoom = Vector2(3.02, 3.02)

[connection signal="body_exited" from="HomeBase" to="HomeBase" method="_on_body_exited"]
[connection signal="died_to_base" from="HomeBase" to="." method="decrement_enemies_left"]
[connection signal="enemy_died" from="Paths/TopPath" to="." method="on_enemy_died"]
[connection signal="enemy_died" from="Paths/TopPath" to="." method="decrement_enemies_left"]
[connection signal="enemy_spawned" from="Paths/TopPath" to="." method="add_to_spawned_wave"]
[connection signal="enemy_died" from="Paths/BottomPath" to="." method="on_enemy_died"]
[connection signal="enemy_died" from="Paths/BottomPath" to="." method="decrement_enemies_left"]
[connection signal="enemy_spawned" from="Paths/BottomPath" to="." method="add_to_spawned_wave"]
[connection signal="enemy_died" from="Paths/MiddlePath" to="." method="on_enemy_died"]
[connection signal="enemy_died" from="Paths/MiddlePath" to="." method="decrement_enemies_left"]
[connection signal="enemy_spawned" from="Paths/MiddlePath" to="." method="add_to_spawned_wave"]
